--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "validator": "^13.11.0"
-  }
+  },
+  "engines": {
+    "node": ">=14 <15"
+}
 }
